src/test/deca/syntax/valid/minus_unaire.deca
// Description:
//          Utilisation de l'opérateur unaire -
//
// Résultat:
//Succès
//
{
    int a = 3;
    a = -a;
}