src/test/deca/syntax/invalid/or_binaire_termemanquant.deca
//  Description :
//            Utilisation de || avec un seul terme
//
// Résultat:
//mismatched input ';'
//
{
    x ||;
}